fix(crops): trim top whitespace on stacked exam pages

--- a/src/components/exam/page-image-stack.module.css
+++ b/src/components/exam/page-image-stack.module.css
@@ -20,10 +20,9 @@
 
 .image {
   position: absolute;
-  inset: 0;
+  left: 0;
+  top: 0;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: top;
+  height: auto;
   display: block;
 }
