--- a/src/components/exam/question-workspace.module.css
+++ b/src/components/exam/question-workspace.module.css
@@ -221,11 +221,10 @@
 
 .overlayImage {
   position: absolute;
-  inset: 0;
+  left: 0;
+  top: 0;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: top;
+  height: auto;
   display: block;
 }
 
